doctors registration data updates into DB successfully

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -26,19 +26,19 @@
     <table>
       <tr>
        <td><label>doctor name: </label></td>
-       <td><input type="text" name="regestername" value="" autocomplete="off"></td>
+       <td><input type="text" name="rname" value="" autocomplete="on"></td>
       </tr>
       <tr>
        <td><label>designation: </label></td>
-       <td><input type="text" name="designation" value="" autocomplete="off"></td>
+       <td><input type="text" name="designation" value="" autocomplete="on"></td>
       </tr>
       <tr>
        <td><label>status: </label></td>
-       <td><input type="text" name="status" value="" autocomplete="off"></td>
+       <td><input type="text" name="status" value="" autocomplete="on"></td>
       </tr>
       <tr>
         <td><label>password: </label></td>
-        <td><input type="password" name="regesterpass" value="" autocomplete="off"></td>
+        <td><input type="password" name="rpass" value="" autocomplete="on"></td>
       </tr>
     </table>
     <br>
